Uppdatering av väglänk funkar, plus ny arcRoute varje gång. Nya körinstruktioner